# astroviper

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTOR_LICENSING_AGREEMENT.txt  CONTRIBUTOR_LICENSING_AGREEMENT_ESO.txt  README.md  pyproject.toml
.github/workflows/: black.yml  python-publish.yml  python-testing-integration.yml  python-testing-linux.yml  python-testing-macos.yml  python-tests.yml  pythonpublish.yml  run-ipynb.yml
dev/alma_single_field/: single_field_tutorial.ipynb
dev/phase_shift/: broadcasting_demo.ipynb
docs/: astroviper_feather_tutorial.ipynb  astroviper_tutorial_calculate_stats.ipynb  astroviper_tutorial_mosaics.ipynb  astroviper_tutorial_spectral_moment.ipynb  atsroviper_tutorial_fft.ipynb  component_models.ipynb  cupy_tutorial.ipynb  feather_tutorial.ipynb  feather_tutorial_create_initial_images.ipynb  feather_tutorial_v2.ipynb  hogbom_clean.ipynb  image_selection.ipynb  msv4_spectral_frame_conversion_demo_comparison.ipynb  multi_gaussian2d_fit.ipynb  psf_fitting.ipynb  radps_workflow_sd_blflag.ipynb
docs/core_tutorials/: hogbom_clean.ipynb  notebook_template.ipynb
docs/core_tutorials/image_analysis/: make_mask.ipynb  psf_fitting.ipynb
docs/core_tutorials/imaging/: briggs_imaging_weights.ipynb  convert_spectral_reference_frame.ipynb  cube_single_field_primary_beam.ipynb  demo_fft_ifft_handling.ipynb  demo_hogbom_clean.ipynb  demo_imaging_loop.ipynb  demo_standard_degrid.ipynb  demo_standard_grid.ipynb  demo_standard_gridder.ipynb  demo_stokes_correlation_conversion.ipynb  hogbom_clean.ipynb  iteration_control_demo.ipynb  make_psf_demo.ipynb  msv4_spectral_frame_conversion_demo_comparison.ipynb  plotting_helpers.py  psf_fitting.ipynb
docs/core_tutorials/single_dish/: freq_conv.ipynb  single_dish_gridder.py  solar-regional-imaging.ipynb
docs/theory/: fringefit-phasors.ipynb  fringefit-snr.ipynb
docs/tutorials/: astroviper_feather_tutorial.ipynb  astroviper_fringefit_tutorial.ipynb  astroviper_tutorial_mosaics.ipynb  astroviper_tutorial_spectral_moment.ipynb  atsroviper_tutorial_fft.ipynb  cube_single_field_imaging.ipynb  cupy_tutorial.ipynb  feather_tutorial.ipynb  feather_tutorial_create_initial_images.ipynb  feather_tutorial_v2.ipynb
docs/utils/: plotting.ipynb
examples/: convert_spectral_reference_frame.ipynb  demo_standard_gridder.ipynb  example_graph_build.ipynb
face_2_face/: alma_mosaics.ipynb  astroviper_installation_test.ipynb  astroviper_tutorial_2.ipynb  astroviper_tutorial_image.ipynb  astroviper_tutorial_mosaics.ipynb  astroviper_tutorial_ps.ipynb  astroviper_tutorial_spectral_moment.ipynb  casa_f2f_ps_msv4_visibilities_data_tutorial.ipynb  image_tutorial.ipynb
src/: psf_gaussian_fit.py
src/astroviper/: client.py  fringefit.py
src/astroviper/_concurrency/_dask/: _scheduler.py  _worker.py
src/astroviper/_concurrency/_dask_viper/: _viper_scheduler.py  _viper_worker.py
src/astroviper/_concurrency/_graph_tools/: __init__.py  _graph_tools.py  _map.py  _reduce.py  _utils.py  _wrap_func_with_dio.py
src/astroviper/_domain/_flagging/: _gridflag.py  _gridflag_histogram.py
src/astroviper/_domain/_image/: __init.py__  _moment_max.py
src/astroviper/_domain/_imaging/: __init__.py  _check_imaging_parameters.py  _fft.py  _fft_norm_img_xds.py  _ifft.py  _make_aperture_grid.py  _make_gridding_convolution_function.py  _make_image.py  _make_imaging_weights.py  _make_uv_sampling_grid.py  _make_visibility_grid.py
src/astroviper/_domain/_imaging/deconvolver/hogbom/: CMakeLists.txt  README.md  pyproject.toml  setup.py  test_simple.py
src/astroviper/_domain/_imaging/deconvolver/hogbom/hogbom_deconvolve/: __init__.py
src/astroviper/_domain/_imaging/deconvolver/hogbom/include/: hogbom_clean.hpp
src/astroviper/_domain/_imaging/deconvolver/hogbom/python/: __init__.py  bindings.cpp  py.typed
src/astroviper/_domain/_imaging/deconvolver/hogbom/src/: hclean.cpp  hogbom_clean.cpp
src/astroviper/_domain/_imaging/deconvolver/hogbom/tests/: test_examples.py  test_hogbom_clean.py
src/astroviper/_domain/_visibility/: _ms_spectral_frame_conversion.py  (+2 more)
src/astroviper/_utils/: __init__.py  _display.py  _logger.py  data_partitioning.py
src/astroviper/calibration/: apply_fringe.py  exercise_fringe_sbd2.py  fringe_cal_quantum.py  fringefit.py
src/astroviper/core/: __init__.py
src/astroviper/core/imaging/deconvolvers/hogbom/: CMakeLists.txt  __init__.py
src/astroviper/core/imaging/deconvolvers/hogbom/include/: hclean.hpp
src/astroviper/core/imaging/deconvolvers/hogbom/python/: bindings.cpp  bindings_old.cpp
src/astroviper/core/imaging/deconvolvers/hogbom/src/: hclean.cpp
src/astroviper/core/imaging/gridders/prolate_spheroidal_grid/: CMakeLists.txt
src/astroviper/core/imaging/gridders/prolate_spheroidal_grid/include/: prolate_spheroidal_grid.hpp
src/astroviper/core/imaging/gridders/prolate_spheroidal_grid/python/: bindings.cpp
src/astroviper/core/imaging/gridders/prolate_spheroidal_grid/src/: prolate_spheroidal_grid.cpp
src/astroviper/distributed/: __init__.py
src/astroviper/fitting/: gaussian2d_fit.py  multi_gaussian2d_fit.py
src/astroviper/flagging/: grid_flag.py
src/astroviper/image/: __init__.py  make_empty_sky_image.py
src/astroviper/imaging/: __init__.py  cube_imaging_niter0.py  feather.py  feather_v2.py
src/astroviper/model/: __init__.py  component_models.py
src/astroviper/task/: __init__.py
src/astroviper/utils/: __init__.py  _gaussian_math.py  check_logger_parms.py  check_params.py  check_parms.py  data_group_tools.py  data_partitioning.py  io.py  plotting.py
src/viper/: viper_client.py
src/viper/_utils/: _graph_tools.py  _io.py  _viper_logger.py  _viper_scheduler.py  _viper_worker.py
src/viper/dio/: _io.py
tests/: README.md
tests/calibration/: test_fringefit_sbd_fft.py
tests/domain/imaging/: test_cube_imaging_niter0.py  test_fft_ifft.py
tests/fitting/: test_multi_gaussian2d_fit.py
tests/image/model/: test_disk.py
tests/imaging/: test_feather.py
tests/model/: test_component_models.py
tests/stakeholder/: test_single_field_imaging.py
tests/utils/: __template__.py
(+133 files in other folders)
