[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.10.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "hogbom-deconvolve"
version = "0.1.0"
description = "Hogbom CLEAN algorithm implementation"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-benchmark",
    "scipy",
]
dev = [
    "pytest>=6.0",
    "pytest-benchmark",
    "scipy",
    "black",
    "isort",
    "mypy",
    "pre-commit",
]

# Scikit-build-core configuration
[tool.scikit-build]
# Specify the CMake build directory
build-dir = "build/{wheel_tag}"
# Map python directory to hogbom package
wheel.packages = ["hogbom_deconvolve"]

[tool.scikit-build.cmake]
# CMake build type
build-type = "Release"

[tool.scikit-build.build]
# Verbose output during build (useful for debugging)
verbose = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
]
